--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,9 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
-        "filament/filament": "^3.0.0",
+        "php": "^8.1",
+        "filament/filament": "^3.0",
+        "filament/spatie-laravel-media-library-plugin": "^3.0",
         "laravelcm/laravel-subscriptions": "^1.3",
         "tomatophp/filament-locations": "^1.0",
         "tomatophp/console-helpers": "^1.1"
