--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "filament/filament": "^3.0",
         "filament/spatie-laravel-media-library-plugin": "^3.0",
         "laravelcm/laravel-subscriptions": "^1.3",
+        "tomatophp/console-helpers": "^1.1",
         "tomatophp/filament-locations": "^1.0",
-        "tomatophp/console-helpers": "^1.1"
+        "tomatophp/filament-translation-component": "^1.0"
     }
 }
